# medical-chatbot

./: .gitignore  README.md  package-lock.json  requirements.txt  translate_diseases.py  translate_symptons.py  translated_diseases.json  translated_symptoms.json
front-end/: components.json  index.html  package-lock.json  package.json  tailwind.config.cjs
front-end/src/: App.jsx  index.css
front-end/src/components/: ChatBot.jsx  DiagnosisResult.jsx  HealthCare.jsx  ImagePrediction.jsx  NavBar.jsx  Navibar.jsx  SymptomChecker.jsx  sleepPrediction.jsx
front-end/src/components/Disease/: Disease.jsx
front-end/src/components/Home/: Home.jsx
front-end/src/components/Patient/: Patient.css  Patient1.jsx  (+1 more)
front-end/src/data/: Diseases.jsx  Symptoms.jsx
front-end/src/pages/: FAQPage.jsx  HomePage.jsx  IssuePage.jsx
healthcare/: sleep-order-prediction.ipynb  stress-level-prediction.ipynb
healthcare/Diseases Detection/: XGBoost  symptom_Description_translated.csv  symptom_precaution_translated.csv  symptoms-to-disease-prediction.ipynb  translate.py
medical_chatbot-backend/: demo.ipynb  main.py  package-lock.json
medical_chatbot-backend/service/: api.py
medical_chatbot-backend/source/: medical_agent.py  wiki_agent.py
medical_chatbot-backend/source/configs/: config.dev.yml
medical_chatbot-main/: .gitignore  README.md  pyproject.toml
medical_chatbot-main/demo/: app.py
medical_chatbot-main/service/: api.py
medical_chatbot-main/source/: cnn.py  medical_graph.py  medical_runnable.py
medical_chatbot-main/source/configs/: .env
pneumonia/: test.py
(+1 files in other folders)
